exports[`patientReducer add case initial state 1`] = `
Object {
  "age": null,
  "ageGroup": Array [
    null,
    "adult",
  ],
  "ageUnits": null,
  "ageYears": null,
  "animalType": null,
  "category": Array [
    null,
    "human",
  ],
  "circumstance": null,
  "gender": null,
  "localityAddress1": null,
  "localityCity": null,
  "localityCountry": null,
  "localityGeometry": Array [
    null,
    Object {},
  ],
  "localityISOCountry": null,
  "localityLocation": null,
  "localityName": null,
  "localityPlaceId": null,
  "localityPostcode": null,
  "localityState": null,
  "localityTelephone": null,
  "medicalRecordNumber": null,
  "medicalRecordNumberEnc": null,
  "name": null,
  "nameEnc": null,
  "occupation": Array [
    null,
    "unknown",
  ],
  "outcome": null,
  "poisonSeverityScore": Array [
    null,
    "Moderate",
  ],
  "pregnantLactating": Array [
    null,
    "unknown",
  ],
  "pregnantStatus": Array [
    null,
    "unknown",
  ],
  "pregnantTrimester": Array [
    null,
    "unknown",
  ],
  "pregnantTrimesterUnknown": null,
  "riskAssessment": Array [
    null,
    "Moderate Risk",
  ],
  "topic": null,
  "weight": null,
  "weightUnits": Array [
    null,
    "kg",
  ],
}
`;

exports[`patientReducer defined state - update patient MRN called 1`] = `
Object {
  "age": null,
  "ageGroup": null,
  "ageUnits": null,
  "ageYears": null,
  "animalType": null,
  "category": null,
  "circumstance": null,
  "gender": null,
  "localityAddress1": null,
  "localityCity": null,
  "localityCountry": null,
  "localityGeometry": null,
  "localityISOCountry": null,
  "localityLocation": null,
  "localityName": null,
  "localityPlaceId": null,
  "localityPostcode": null,
  "localityState": null,
  "localityTelephone": null,
  "medicalRecordNumber": Array [
    null,
    "54321",
  ],
  "medicalRecordNumberEnc": Array [
    "encryptedString",
    "encryptedString",
  ],
  "name": null,
  "nameEnc": null,
  "occupation": null,
  "outcome": null,
  "poisonSeverityScore": null,
  "pregnantLactating": null,
  "pregnantStatus": null,
  "pregnantTrimester": null,
  "pregnantTrimesterUnknown": null,
  "riskAssessment": null,
  "topic": null,
  "weight": null,
  "weightUnits": null,
}
`;

exports[`patientReducer defined state - update patient age called 1`] = `
Object {
  "age": Array [
    10,
    1,
  ],
  "ageGroup": null,
  "ageUnits": Array [
    "days",
    "months",
  ],
  "ageYears": null,
  "animalType": null,
  "category": null,
  "circumstance": null,
  "gender": null,
  "localityAddress1": null,
  "localityCity": null,
  "localityCountry": null,
  "localityGeometry": null,
  "localityISOCountry": null,
  "localityLocation": null,
  "localityName": null,
  "localityPlaceId": null,
  "localityPostcode": null,
  "localityState": null,
  "localityTelephone": null,
  "medicalRecordNumber": null,
  "medicalRecordNumberEnc": null,
  "name": null,
  "nameEnc": null,
  "occupation": null,
  "outcome": null,
  "poisonSeverityScore": null,
  "pregnantLactating": null,
  "pregnantStatus": null,
  "pregnantTrimester": null,
  "pregnantTrimesterUnknown": null,
  "riskAssessment": null,
  "topic": null,
  "weight": null,
  "weightUnits": null,
}
`;

exports[`patientReducer defined state - update patient age group called 1`] = `
Object {
  "age": null,
  "ageGroup": Array [
    "Infant",
    "Toddler",
  ],
  "ageUnits": null,
  "ageYears": null,
  "animalType": null,
  "category": null,
  "circumstance": null,
  "gender": null,
  "localityAddress1": null,
  "localityCity": null,
  "localityCountry": null,
  "localityGeometry": null,
  "localityISOCountry": null,
  "localityLocation": null,
  "localityName": null,
  "localityPlaceId": null,
  "localityPostcode": null,
  "localityState": null,
  "localityTelephone": null,
  "medicalRecordNumber": null,
  "medicalRecordNumberEnc": null,
  "name": null,
  "nameEnc": null,
  "occupation": null,
  "outcome": null,
  "poisonSeverityScore": null,
  "pregnantLactating": null,
  "pregnantStatus": null,
  "pregnantTrimester": null,
  "pregnantTrimesterUnknown": null,
  "riskAssessment": null,
  "topic": null,
  "weight": null,
  "weightUnits": null,
}
`;

exports[`patientReducer defined state - update patient animal called 1`] = `
Object {
  "age": null,
  "ageGroup": null,
  "ageUnits": null,
  "ageYears": null,
  "animalType": Array [
    "Bird",
    "Dog",
  ],
  "category": null,
  "circumstance": null,
  "gender": null,
  "localityAddress1": null,
  "localityCity": null,
  "localityCountry": null,
  "localityGeometry": null,
  "localityISOCountry": null,
  "localityLocation": null,
  "localityName": null,
  "localityPlaceId": null,
  "localityPostcode": null,
  "localityState": null,
  "localityTelephone": null,
  "medicalRecordNumber": null,
  "medicalRecordNumberEnc": null,
  "name": null,
  "nameEnc": null,
  "occupation": null,
  "outcome": null,
  "poisonSeverityScore": null,
  "pregnantLactating": null,
  "pregnantStatus": null,
  "pregnantTrimester": null,
  "pregnantTrimesterUnknown": null,
  "riskAssessment": null,
  "topic": null,
  "weight": null,
  "weightUnits": null,
}
`;

exports[`patientReducer defined state - update patient category called 1`] = `
Object {
  "age": null,
  "ageGroup": null,
  "ageUnits": null,
  "ageYears": null,
  "animalType": null,
  "category": Array [
    "animal",
    "human",
  ],
  "circumstance": null,
  "gender": null,
  "localityAddress1": null,
  "localityCity": null,
  "localityCountry": null,
  "localityGeometry": null,
  "localityISOCountry": null,
  "localityLocation": null,
  "localityName": null,
  "localityPlaceId": null,
  "localityPostcode": null,
  "localityState": null,
  "localityTelephone": null,
  "medicalRecordNumber": null,
  "medicalRecordNumberEnc": null,
  "name": null,
  "nameEnc": null,
  "occupation": null,
  "outcome": null,
  "poisonSeverityScore": null,
  "pregnantLactating": null,
  "pregnantStatus": null,
  "pregnantTrimester": null,
  "pregnantTrimesterUnknown": null,
  "riskAssessment": null,
  "topic": null,
  "weight": null,
  "weightUnits": null,
}
`;

exports[`patientReducer defined state - update patient circumstance called 1`] = `
Object {
  "age": null,
  "ageGroup": null,
  "ageUnits": null,
  "ageYears": null,
  "animalType": null,
  "category": null,
  "circumstance": Array [
    "Intentional - Abuse",
    "Intentional - Misuse",
  ],
  "gender": null,
  "localityAddress1": null,
  "localityCity": null,
  "localityCountry": null,
  "localityGeometry": null,
  "localityISOCountry": null,
  "localityLocation": null,
  "localityName": null,
  "localityPlaceId": null,
  "localityPostcode": null,
  "localityState": null,
  "localityTelephone": null,
  "medicalRecordNumber": null,
  "medicalRecordNumberEnc": null,
  "name": null,
  "nameEnc": null,
  "occupation": null,
  "outcome": null,
  "poisonSeverityScore": null,
  "pregnantLactating": null,
  "pregnantStatus": null,
  "pregnantTrimester": null,
  "pregnantTrimesterUnknown": null,
  "riskAssessment": null,
  "topic": null,
  "weight": null,
  "weightUnits": null,
}
`;

exports[`patientReducer defined state - update patient location called 1`] = `
Object {
  "age": null,
  "ageGroup": null,
  "ageUnits": null,
  "ageYears": null,
  "animalType": null,
  "category": null,
  "circumstance": null,
  "gender": null,
  "localityAddress1": null,
  "localityCity": null,
  "localityCountry": null,
  "localityGeometry": null,
  "localityISOCountry": null,
  "localityLocation": Array [
    "Home",
    "Work",
  ],
  "localityName": null,
  "localityPlaceId": null,
  "localityPostcode": null,
  "localityState": null,
  "localityTelephone": null,
  "medicalRecordNumber": null,
  "medicalRecordNumberEnc": null,
  "name": null,
  "nameEnc": null,
  "occupation": null,
  "outcome": null,
  "poisonSeverityScore": null,
  "pregnantLactating": null,
  "pregnantStatus": null,
  "pregnantTrimester": null,
  "pregnantTrimesterUnknown": null,
  "riskAssessment": null,
  "topic": null,
  "weight": null,
  "weightUnits": null,
}
`;

exports[`patientReducer defined state - update patient name called 1`] = `
Object {
  "age": null,
  "ageGroup": null,
  "ageUnits": null,
  "ageYears": null,
  "animalType": null,
  "category": null,
  "circumstance": null,
  "gender": null,
  "localityAddress1": null,
  "localityCity": null,
  "localityCountry": null,
  "localityGeometry": null,
  "localityISOCountry": null,
  "localityLocation": null,
  "localityName": null,
  "localityPlaceId": null,
  "localityPostcode": null,
  "localityState": null,
  "localityTelephone": null,
  "medicalRecordNumber": null,
  "medicalRecordNumberEnc": null,
  "name": Array [
    null,
    "John Smith",
  ],
  "nameEnc": Array [
    "encryptedString",
    "encryptedString",
  ],
  "occupation": null,
  "outcome": null,
  "poisonSeverityScore": null,
  "pregnantLactating": null,
  "pregnantStatus": null,
  "pregnantTrimester": null,
  "pregnantTrimesterUnknown": null,
  "riskAssessment": null,
  "topic": null,
  "weight": null,
  "weightUnits": null,
}
`;

exports[`patientReducer defined state - update patient occupation called 1`] = `
Object {
  "age": null,
  "ageGroup": null,
  "ageUnits": null,
  "ageYears": null,
  "animalType": null,
  "category": Array [
    "Teacher",
    "Principal",
  ],
  "circumstance": null,
  "gender": null,
  "localityAddress1": null,
  "localityCity": null,
  "localityCountry": null,
  "localityGeometry": null,
  "localityISOCountry": null,
  "localityLocation": null,
  "localityName": null,
  "localityPlaceId": null,
  "localityPostcode": null,
  "localityState": null,
  "localityTelephone": null,
  "medicalRecordNumber": null,
  "medicalRecordNumberEnc": null,
  "name": null,
  "nameEnc": null,
  "occupation": Array [
    null,
    "Teacher",
  ],
  "outcome": null,
  "poisonSeverityScore": null,
  "pregnantLactating": null,
  "pregnantStatus": null,
  "pregnantTrimester": null,
  "pregnantTrimesterUnknown": null,
  "riskAssessment": null,
  "topic": null,
  "weight": null,
  "weightUnits": null,
}
`;

exports[`patientReducer defined state - update patient postcode called 1`] = `
Object {
  "age": null,
  "ageGroup": null,
  "ageUnits": null,
  "ageYears": null,
  "animalType": null,
  "category": null,
  "circumstance": null,
  "gender": null,
  "localityAddress1": null,
  "localityCity": null,
  "localityCountry": null,
  "localityGeometry": null,
  "localityISOCountry": null,
  "localityLocation": null,
  "localityName": null,
  "localityPlaceId": null,
  "localityPostcode": Array [
    "6000",
    "6001",
  ],
  "localityState": null,
  "localityTelephone": null,
  "medicalRecordNumber": null,
  "medicalRecordNumberEnc": null,
  "name": null,
  "nameEnc": null,
  "occupation": null,
  "outcome": null,
  "poisonSeverityScore": null,
  "pregnantLactating": null,
  "pregnantStatus": null,
  "pregnantTrimester": null,
  "pregnantTrimesterUnknown": null,
  "riskAssessment": null,
  "topic": null,
  "weight": null,
  "weightUnits": null,
}
`;

exports[`patientReducer defined state - update patient pregnant - lactating called 1`] = `
Object {
  "age": null,
  "ageGroup": null,
  "ageUnits": null,
  "ageYears": null,
  "animalType": null,
  "category": null,
  "circumstance": null,
  "gender": null,
  "localityAddress1": null,
  "localityCity": null,
  "localityCountry": null,
  "localityGeometry": null,
  "localityISOCountry": null,
  "localityLocation": null,
  "localityName": null,
  "localityPlaceId": null,
  "localityPostcode": null,
  "localityState": null,
  "localityTelephone": null,
  "medicalRecordNumber": null,
  "medicalRecordNumberEnc": null,
  "name": null,
  "nameEnc": null,
  "occupation": null,
  "outcome": null,
  "poisonSeverityScore": null,
  "pregnantLactating": Array [
    null,
    "Yes",
  ],
  "pregnantStatus": null,
  "pregnantTrimester": null,
  "pregnantTrimesterUnknown": null,
  "riskAssessment": null,
  "topic": null,
  "weight": null,
  "weightUnits": null,
}
`;

exports[`patientReducer defined state - update patient pregnant - status called 1`] = `
Object {
  "age": null,
  "ageGroup": null,
  "ageUnits": null,
  "ageYears": null,
  "animalType": null,
  "category": null,
  "circumstance": null,
  "gender": null,
  "localityAddress1": null,
  "localityCity": null,
  "localityCountry": null,
  "localityGeometry": null,
  "localityISOCountry": null,
  "localityLocation": null,
  "localityName": null,
  "localityPlaceId": null,
  "localityPostcode": null,
  "localityState": null,
  "localityTelephone": null,
  "medicalRecordNumber": null,
  "medicalRecordNumberEnc": null,
  "name": null,
  "nameEnc": null,
  "occupation": null,
  "outcome": null,
  "poisonSeverityScore": null,
  "pregnantLactating": null,
  "pregnantStatus": Array [
    null,
    "Yes",
  ],
  "pregnantTrimester": null,
  "pregnantTrimesterUnknown": null,
  "riskAssessment": null,
  "topic": null,
  "weight": null,
  "weightUnits": null,
}
`;

exports[`patientReducer defined state - update patient pregnant - trimester called 1`] = `
Object {
  "age": null,
  "ageGroup": null,
  "ageUnits": null,
  "ageYears": null,
  "animalType": null,
  "category": null,
  "circumstance": null,
  "gender": null,
  "localityAddress1": null,
  "localityCity": null,
  "localityCountry": null,
  "localityGeometry": null,
  "localityISOCountry": null,
  "localityLocation": null,
  "localityName": null,
  "localityPlaceId": null,
  "localityPostcode": null,
  "localityState": null,
  "localityTelephone": null,
  "medicalRecordNumber": null,
  "medicalRecordNumberEnc": null,
  "name": null,
  "nameEnc": null,
  "occupation": null,
  "outcome": null,
  "poisonSeverityScore": null,
  "pregnantLactating": null,
  "pregnantStatus": null,
  "pregnantTrimester": Array [
    null,
    "2",
  ],
  "pregnantTrimesterUnknown": null,
  "riskAssessment": null,
  "topic": null,
  "weight": null,
  "weightUnits": null,
}
`;

exports[`patientReducer defined state - update patient pregnant - trimesterUnknown called 1`] = `
Object {
  "age": null,
  "ageGroup": null,
  "ageUnits": null,
  "ageYears": null,
  "animalType": null,
  "category": null,
  "circumstance": null,
  "gender": null,
  "localityAddress1": null,
  "localityCity": null,
  "localityCountry": null,
  "localityGeometry": null,
  "localityISOCountry": null,
  "localityLocation": null,
  "localityName": null,
  "localityPlaceId": null,
  "localityPostcode": null,
  "localityState": null,
  "localityTelephone": null,
  "medicalRecordNumber": null,
  "medicalRecordNumberEnc": null,
  "name": null,
  "nameEnc": null,
  "occupation": null,
  "outcome": null,
  "poisonSeverityScore": null,
  "pregnantLactating": null,
  "pregnantStatus": null,
  "pregnantTrimester": null,
  "pregnantTrimesterUnknown": Array [
    null,
    "false",
  ],
  "riskAssessment": null,
  "topic": null,
  "weight": null,
  "weightUnits": null,
}
`;

exports[`patientReducer defined state - update patient riskAssessment called 1`] = `
Object {
  "age": null,
  "ageGroup": null,
  "ageUnits": null,
  "ageYears": null,
  "animalType": null,
  "category": null,
  "circumstance": null,
  "gender": null,
  "localityAddress1": null,
  "localityCity": null,
  "localityCountry": null,
  "localityGeometry": null,
  "localityISOCountry": null,
  "localityLocation": null,
  "localityName": null,
  "localityPlaceId": null,
  "localityPostcode": null,
  "localityState": null,
  "localityTelephone": null,
  "medicalRecordNumber": null,
  "medicalRecordNumberEnc": null,
  "name": null,
  "nameEnc": null,
  "occupation": null,
  "outcome": null,
  "poisonSeverityScore": null,
  "pregnantLactating": null,
  "pregnantStatus": null,
  "pregnantTrimester": null,
  "pregnantTrimesterUnknown": null,
  "riskAssessment": Array [
    null,
    "Minimal Risk",
  ],
  "topic": null,
  "weight": null,
  "weightUnits": null,
}
`;

exports[`patientReducer defined state - update patient severity score called 1`] = `
Object {
  "age": null,
  "ageGroup": null,
  "ageUnits": null,
  "ageYears": null,
  "animalType": null,
  "category": Array [
    "Moderate",
    "Minimal",
  ],
  "circumstance": null,
  "gender": null,
  "localityAddress1": null,
  "localityCity": null,
  "localityCountry": null,
  "localityGeometry": null,
  "localityISOCountry": null,
  "localityLocation": null,
  "localityName": null,
  "localityPlaceId": null,
  "localityPostcode": null,
  "localityState": null,
  "localityTelephone": null,
  "medicalRecordNumber": null,
  "medicalRecordNumberEnc": null,
  "name": null,
  "nameEnc": null,
  "occupation": null,
  "outcome": null,
  "poisonSeverityScore": Array [
    null,
    "Moderate",
  ],
  "pregnantLactating": null,
  "pregnantStatus": null,
  "pregnantTrimester": null,
  "pregnantTrimesterUnknown": null,
  "riskAssessment": null,
  "topic": null,
  "weight": null,
  "weightUnits": null,
}
`;

exports[`patientReducer defined state - update patient sex called 1`] = `
Object {
  "age": null,
  "ageGroup": null,
  "ageUnits": null,
  "ageYears": null,
  "animalType": null,
  "category": null,
  "circumstance": null,
  "gender": Array [
    null,
    "male",
  ],
  "localityAddress1": null,
  "localityCity": null,
  "localityCountry": null,
  "localityGeometry": null,
  "localityISOCountry": null,
  "localityLocation": null,
  "localityName": null,
  "localityPlaceId": null,
  "localityPostcode": null,
  "localityState": null,
  "localityTelephone": null,
  "medicalRecordNumber": null,
  "medicalRecordNumberEnc": null,
  "name": null,
  "nameEnc": null,
  "occupation": null,
  "outcome": null,
  "poisonSeverityScore": null,
  "pregnantLactating": null,
  "pregnantStatus": null,
  "pregnantTrimester": null,
  "pregnantTrimesterUnknown": null,
  "riskAssessment": null,
  "topic": null,
  "weight": null,
  "weightUnits": null,
}
`;

exports[`patientReducer defined state - update patient suburb called 1`] = `
Object {
  "age": null,
  "ageGroup": null,
  "ageUnits": null,
  "ageYears": null,
  "animalType": null,
  "category": null,
  "circumstance": null,
  "gender": null,
  "localityAddress1": null,
  "localityCity": Array [
    "Perth",
    "Sydney",
  ],
  "localityCountry": null,
  "localityGeometry": null,
  "localityISOCountry": null,
  "localityLocation": null,
  "localityName": null,
  "localityPlaceId": null,
  "localityPostcode": null,
  "localityState": null,
  "localityTelephone": null,
  "medicalRecordNumber": null,
  "medicalRecordNumberEnc": null,
  "name": null,
  "nameEnc": null,
  "occupation": null,
  "outcome": null,
  "poisonSeverityScore": null,
  "pregnantLactating": null,
  "pregnantStatus": null,
  "pregnantTrimester": null,
  "pregnantTrimesterUnknown": null,
  "riskAssessment": null,
  "topic": null,
  "weight": null,
  "weightUnits": null,
}
`;

exports[`patientReducer defined state - update patient weight called 1`] = `
Object {
  "age": null,
  "ageGroup": null,
  "ageUnits": null,
  "ageYears": null,
  "animalType": null,
  "category": null,
  "circumstance": null,
  "gender": null,
  "localityAddress1": null,
  "localityCity": null,
  "localityCountry": null,
  "localityGeometry": null,
  "localityISOCountry": null,
  "localityLocation": null,
  "localityName": null,
  "localityPlaceId": null,
  "localityPostcode": null,
  "localityState": null,
  "localityTelephone": null,
  "medicalRecordNumber": null,
  "medicalRecordNumberEnc": null,
  "name": null,
  "nameEnc": null,
  "occupation": null,
  "outcome": null,
  "poisonSeverityScore": null,
  "pregnantLactating": null,
  "pregnantStatus": null,
  "pregnantTrimester": null,
  "pregnantTrimesterUnknown": null,
  "riskAssessment": null,
  "topic": null,
  "weight": Array [
    null,
    "1",
  ],
  "weightUnits": Array [
    null,
    "kg",
  ],
}
`;

exports[`patientReducer initial state - update patient MRN called 1`] = `
Object {
  "age": null,
  "ageGroup": null,
  "ageUnits": null,
  "ageYears": null,
  "animalType": null,
  "category": null,
  "circumstance": null,
  "gender": null,
  "localityAddress1": null,
  "localityCity": null,
  "localityCountry": null,
  "localityGeometry": null,
  "localityISOCountry": null,
  "localityLocation": null,
  "localityName": null,
  "localityPlaceId": null,
  "localityPostcode": null,
  "localityState": null,
  "localityTelephone": null,
  "medicalRecordNumber": Array [
    null,
    "12345",
  ],
  "medicalRecordNumberEnc": Array [
    "",
    "encryptedString",
  ],
  "name": null,
  "nameEnc": null,
  "occupation": null,
  "outcome": null,
  "poisonSeverityScore": null,
  "pregnantLactating": null,
  "pregnantStatus": null,
  "pregnantTrimester": null,
  "pregnantTrimesterUnknown": null,
  "riskAssessment": null,
  "topic": null,
  "weight": null,
  "weightUnits": null,
}
`;

exports[`patientReducer initial state - update patient age called 1`] = `
Object {
  "age": Array [
    null,
    1,
  ],
  "ageGroup": null,
  "ageUnits": Array [
    null,
    "months",
  ],
  "ageYears": null,
  "animalType": null,
  "category": null,
  "circumstance": null,
  "gender": null,
  "localityAddress1": null,
  "localityCity": null,
  "localityCountry": null,
  "localityGeometry": null,
  "localityISOCountry": null,
  "localityLocation": null,
  "localityName": null,
  "localityPlaceId": null,
  "localityPostcode": null,
  "localityState": null,
  "localityTelephone": null,
  "medicalRecordNumber": null,
  "medicalRecordNumberEnc": null,
  "name": null,
  "nameEnc": null,
  "occupation": null,
  "outcome": null,
  "poisonSeverityScore": null,
  "pregnantLactating": null,
  "pregnantStatus": null,
  "pregnantTrimester": null,
  "pregnantTrimesterUnknown": null,
  "riskAssessment": null,
  "topic": null,
  "weight": null,
  "weightUnits": null,
}
`;

exports[`patientReducer initial state - update patient age group called 1`] = `
Object {
  "age": null,
  "ageGroup": Array [
    null,
    "Infant",
  ],
  "ageUnits": null,
  "ageYears": null,
  "animalType": null,
  "category": null,
  "circumstance": null,
  "gender": null,
  "localityAddress1": null,
  "localityCity": null,
  "localityCountry": null,
  "localityGeometry": null,
  "localityISOCountry": null,
  "localityLocation": null,
  "localityName": null,
  "localityPlaceId": null,
  "localityPostcode": null,
  "localityState": null,
  "localityTelephone": null,
  "medicalRecordNumber": null,
  "medicalRecordNumberEnc": null,
  "name": null,
  "nameEnc": null,
  "occupation": null,
  "outcome": null,
  "poisonSeverityScore": null,
  "pregnantLactating": null,
  "pregnantStatus": null,
  "pregnantTrimester": null,
  "pregnantTrimesterUnknown": null,
  "riskAssessment": null,
  "topic": null,
  "weight": null,
  "weightUnits": null,
}
`;

exports[`patientReducer initial state - update patient animal type called 1`] = `
Object {
  "age": null,
  "ageGroup": null,
  "ageUnits": null,
  "ageYears": null,
  "animalType": Array [
    null,
    "Bird",
  ],
  "category": null,
  "circumstance": null,
  "gender": null,
  "localityAddress1": null,
  "localityCity": null,
  "localityCountry": null,
  "localityGeometry": null,
  "localityISOCountry": null,
  "localityLocation": null,
  "localityName": null,
  "localityPlaceId": null,
  "localityPostcode": null,
  "localityState": null,
  "localityTelephone": null,
  "medicalRecordNumber": null,
  "medicalRecordNumberEnc": null,
  "name": null,
  "nameEnc": null,
  "occupation": null,
  "outcome": null,
  "poisonSeverityScore": null,
  "pregnantLactating": null,
  "pregnantStatus": null,
  "pregnantTrimester": null,
  "pregnantTrimesterUnknown": null,
  "riskAssessment": null,
  "topic": null,
  "weight": null,
  "weightUnits": null,
}
`;

exports[`patientReducer initial state - update patient category called 1`] = `
Object {
  "age": null,
  "ageGroup": null,
  "ageUnits": null,
  "ageYears": null,
  "animalType": null,
  "category": Array [
    null,
    "human",
  ],
  "circumstance": null,
  "gender": null,
  "localityAddress1": null,
  "localityCity": null,
  "localityCountry": null,
  "localityGeometry": null,
  "localityISOCountry": null,
  "localityLocation": null,
  "localityName": null,
  "localityPlaceId": null,
  "localityPostcode": null,
  "localityState": null,
  "localityTelephone": null,
  "medicalRecordNumber": null,
  "medicalRecordNumberEnc": null,
  "name": null,
  "nameEnc": null,
  "occupation": null,
  "outcome": null,
  "poisonSeverityScore": null,
  "pregnantLactating": null,
  "pregnantStatus": null,
  "pregnantTrimester": null,
  "pregnantTrimesterUnknown": null,
  "riskAssessment": null,
  "topic": null,
  "weight": null,
  "weightUnits": null,
}
`;

exports[`patientReducer initial state - update patient circumstance called 1`] = `
Object {
  "age": null,
  "ageGroup": null,
  "ageUnits": null,
  "ageYears": null,
  "animalType": null,
  "category": null,
  "circumstance": Array [
    null,
    "Intentional - Abuse",
  ],
  "gender": null,
  "localityAddress1": null,
  "localityCity": null,
  "localityCountry": null,
  "localityGeometry": null,
  "localityISOCountry": null,
  "localityLocation": null,
  "localityName": null,
  "localityPlaceId": null,
  "localityPostcode": null,
  "localityState": null,
  "localityTelephone": null,
  "medicalRecordNumber": null,
  "medicalRecordNumberEnc": null,
  "name": null,
  "nameEnc": null,
  "occupation": null,
  "outcome": null,
  "poisonSeverityScore": null,
  "pregnantLactating": null,
  "pregnantStatus": null,
  "pregnantTrimester": null,
  "pregnantTrimesterUnknown": null,
  "riskAssessment": null,
  "topic": null,
  "weight": null,
  "weightUnits": null,
}
`;

exports[`patientReducer initial state - update patient location called 1`] = `
Object {
  "age": null,
  "ageGroup": null,
  "ageUnits": null,
  "ageYears": null,
  "animalType": null,
  "category": null,
  "circumstance": null,
  "gender": null,
  "localityAddress1": null,
  "localityCity": null,
  "localityCountry": null,
  "localityGeometry": null,
  "localityISOCountry": null,
  "localityLocation": Array [
    null,
    "Home",
  ],
  "localityName": null,
  "localityPlaceId": null,
  "localityPostcode": null,
  "localityState": null,
  "localityTelephone": null,
  "medicalRecordNumber": null,
  "medicalRecordNumberEnc": null,
  "name": null,
  "nameEnc": null,
  "occupation": null,
  "outcome": null,
  "poisonSeverityScore": null,
  "pregnantLactating": null,
  "pregnantStatus": null,
  "pregnantTrimester": null,
  "pregnantTrimesterUnknown": null,
  "riskAssessment": null,
  "topic": null,
  "weight": null,
  "weightUnits": null,
}
`;

exports[`patientReducer initial state - update patient name called 1`] = `
Object {
  "age": null,
  "ageGroup": null,
  "ageUnits": null,
  "ageYears": null,
  "animalType": null,
  "category": null,
  "circumstance": null,
  "gender": null,
  "localityAddress1": null,
  "localityCity": null,
  "localityCountry": null,
  "localityGeometry": null,
  "localityISOCountry": null,
  "localityLocation": null,
  "localityName": null,
  "localityPlaceId": null,
  "localityPostcode": null,
  "localityState": null,
  "localityTelephone": null,
  "medicalRecordNumber": null,
  "medicalRecordNumberEnc": null,
  "name": Array [
    null,
    "Test tester",
  ],
  "nameEnc": Array [
    "",
    "encryptedString",
  ],
  "occupation": null,
  "outcome": null,
  "poisonSeverityScore": null,
  "pregnantLactating": null,
  "pregnantStatus": null,
  "pregnantTrimester": null,
  "pregnantTrimesterUnknown": null,
  "riskAssessment": null,
  "topic": null,
  "weight": null,
  "weightUnits": null,
}
`;

exports[`patientReducer initial state - update patient occupation called 1`] = `
Object {
  "age": null,
  "ageGroup": null,
  "ageUnits": null,
  "ageYears": null,
  "animalType": null,
  "category": null,
  "circumstance": null,
  "gender": null,
  "localityAddress1": null,
  "localityCity": null,
  "localityCountry": null,
  "localityGeometry": null,
  "localityISOCountry": null,
  "localityLocation": null,
  "localityName": null,
  "localityPlaceId": null,
  "localityPostcode": null,
  "localityState": null,
  "localityTelephone": null,
  "medicalRecordNumber": null,
  "medicalRecordNumberEnc": null,
  "name": null,
  "nameEnc": null,
  "occupation": Array [
    null,
    "Teacher",
  ],
  "outcome": null,
  "poisonSeverityScore": null,
  "pregnantLactating": null,
  "pregnantStatus": null,
  "pregnantTrimester": null,
  "pregnantTrimesterUnknown": null,
  "riskAssessment": null,
  "topic": null,
  "weight": null,
  "weightUnits": null,
}
`;

exports[`patientReducer initial state - update patient postcode called 1`] = `
Object {
  "age": null,
  "ageGroup": null,
  "ageUnits": null,
  "ageYears": null,
  "animalType": null,
  "category": null,
  "circumstance": null,
  "gender": null,
  "localityAddress1": null,
  "localityCity": null,
  "localityCountry": null,
  "localityGeometry": null,
  "localityISOCountry": null,
  "localityLocation": null,
  "localityName": null,
  "localityPlaceId": null,
  "localityPostcode": Array [
    null,
    "6000",
  ],
  "localityState": null,
  "localityTelephone": null,
  "medicalRecordNumber": null,
  "medicalRecordNumberEnc": null,
  "name": null,
  "nameEnc": null,
  "occupation": null,
  "outcome": null,
  "poisonSeverityScore": null,
  "pregnantLactating": null,
  "pregnantStatus": null,
  "pregnantTrimester": null,
  "pregnantTrimesterUnknown": null,
  "riskAssessment": null,
  "topic": null,
  "weight": null,
  "weightUnits": null,
}
`;

exports[`patientReducer initial state - update patient pregnant - lactating called 1`] = `
Object {
  "age": null,
  "ageGroup": null,
  "ageUnits": null,
  "ageYears": null,
  "animalType": null,
  "category": null,
  "circumstance": null,
  "gender": null,
  "localityAddress1": null,
  "localityCity": null,
  "localityCountry": null,
  "localityGeometry": null,
  "localityISOCountry": null,
  "localityLocation": null,
  "localityName": null,
  "localityPlaceId": null,
  "localityPostcode": null,
  "localityState": null,
  "localityTelephone": null,
  "medicalRecordNumber": null,
  "medicalRecordNumberEnc": null,
  "name": null,
  "nameEnc": null,
  "occupation": null,
  "outcome": null,
  "poisonSeverityScore": null,
  "pregnantLactating": Array [
    null,
    "No",
  ],
  "pregnantStatus": null,
  "pregnantTrimester": null,
  "pregnantTrimesterUnknown": null,
  "riskAssessment": null,
  "topic": null,
  "weight": null,
  "weightUnits": null,
}
`;

exports[`patientReducer initial state - update patient pregnant - status called 1`] = `
Object {
  "age": null,
  "ageGroup": null,
  "ageUnits": null,
  "ageYears": null,
  "animalType": null,
  "category": null,
  "circumstance": null,
  "gender": null,
  "localityAddress1": null,
  "localityCity": null,
  "localityCountry": null,
  "localityGeometry": null,
  "localityISOCountry": null,
  "localityLocation": null,
  "localityName": null,
  "localityPlaceId": null,
  "localityPostcode": null,
  "localityState": null,
  "localityTelephone": null,
  "medicalRecordNumber": null,
  "medicalRecordNumberEnc": null,
  "name": null,
  "nameEnc": null,
  "occupation": null,
  "outcome": null,
  "poisonSeverityScore": null,
  "pregnantLactating": null,
  "pregnantStatus": Array [
    null,
    "No",
  ],
  "pregnantTrimester": null,
  "pregnantTrimesterUnknown": null,
  "riskAssessment": null,
  "topic": null,
  "weight": null,
  "weightUnits": null,
}
`;

exports[`patientReducer initial state - update patient pregnant - trimester called 1`] = `
Object {
  "age": null,
  "ageGroup": null,
  "ageUnits": null,
  "ageYears": null,
  "animalType": null,
  "category": null,
  "circumstance": null,
  "gender": null,
  "localityAddress1": null,
  "localityCity": null,
  "localityCountry": null,
  "localityGeometry": null,
  "localityISOCountry": null,
  "localityLocation": null,
  "localityName": null,
  "localityPlaceId": null,
  "localityPostcode": null,
  "localityState": null,
  "localityTelephone": null,
  "medicalRecordNumber": null,
  "medicalRecordNumberEnc": null,
  "name": null,
  "nameEnc": null,
  "occupation": null,
  "outcome": null,
  "poisonSeverityScore": null,
  "pregnantLactating": null,
  "pregnantStatus": null,
  "pregnantTrimester": Array [
    null,
    "1",
  ],
  "pregnantTrimesterUnknown": null,
  "riskAssessment": null,
  "topic": null,
  "weight": null,
  "weightUnits": null,
}
`;

exports[`patientReducer initial state - update patient pregnant - trimesterUnknown called 1`] = `
Object {
  "age": null,
  "ageGroup": null,
  "ageUnits": null,
  "ageYears": null,
  "animalType": null,
  "category": null,
  "circumstance": null,
  "gender": null,
  "localityAddress1": null,
  "localityCity": null,
  "localityCountry": null,
  "localityGeometry": null,
  "localityISOCountry": null,
  "localityLocation": null,
  "localityName": null,
  "localityPlaceId": null,
  "localityPostcode": null,
  "localityState": null,
  "localityTelephone": null,
  "medicalRecordNumber": null,
  "medicalRecordNumberEnc": null,
  "name": null,
  "nameEnc": null,
  "occupation": null,
  "outcome": null,
  "poisonSeverityScore": null,
  "pregnantLactating": null,
  "pregnantStatus": null,
  "pregnantTrimester": null,
  "pregnantTrimesterUnknown": Array [
    null,
    "true",
  ],
  "riskAssessment": null,
  "topic": null,
  "weight": null,
  "weightUnits": null,
}
`;

exports[`patientReducer initial state - update patient riskAssessment called 1`] = `
Object {
  "age": null,
  "ageGroup": null,
  "ageUnits": null,
  "ageYears": null,
  "animalType": null,
  "category": null,
  "circumstance": null,
  "gender": null,
  "localityAddress1": null,
  "localityCity": null,
  "localityCountry": null,
  "localityGeometry": null,
  "localityISOCountry": null,
  "localityLocation": null,
  "localityName": null,
  "localityPlaceId": null,
  "localityPostcode": null,
  "localityState": null,
  "localityTelephone": null,
  "medicalRecordNumber": null,
  "medicalRecordNumberEnc": null,
  "name": null,
  "nameEnc": null,
  "occupation": null,
  "outcome": null,
  "poisonSeverityScore": null,
  "pregnantLactating": null,
  "pregnantStatus": null,
  "pregnantTrimester": null,
  "pregnantTrimesterUnknown": null,
  "riskAssessment": Array [
    null,
    "No Risk",
  ],
  "topic": null,
  "weight": null,
  "weightUnits": null,
}
`;

exports[`patientReducer initial state - update patient severity score called 1`] = `
Object {
  "age": null,
  "ageGroup": null,
  "ageUnits": null,
  "ageYears": null,
  "animalType": null,
  "category": null,
  "circumstance": null,
  "gender": null,
  "localityAddress1": null,
  "localityCity": null,
  "localityCountry": null,
  "localityGeometry": null,
  "localityISOCountry": null,
  "localityLocation": null,
  "localityName": null,
  "localityPlaceId": null,
  "localityPostcode": null,
  "localityState": null,
  "localityTelephone": null,
  "medicalRecordNumber": null,
  "medicalRecordNumberEnc": null,
  "name": null,
  "nameEnc": null,
  "occupation": null,
  "outcome": null,
  "poisonSeverityScore": Array [
    null,
    "Moderate",
  ],
  "pregnantLactating": null,
  "pregnantStatus": null,
  "pregnantTrimester": null,
  "pregnantTrimesterUnknown": null,
  "riskAssessment": null,
  "topic": null,
  "weight": null,
  "weightUnits": null,
}
`;

exports[`patientReducer initial state - update patient sex called 1`] = `
Object {
  "age": null,
  "ageGroup": null,
  "ageUnits": null,
  "ageYears": null,
  "animalType": null,
  "category": null,
  "circumstance": null,
  "gender": Array [
    null,
    "female",
  ],
  "localityAddress1": null,
  "localityCity": null,
  "localityCountry": null,
  "localityGeometry": null,
  "localityISOCountry": null,
  "localityLocation": null,
  "localityName": null,
  "localityPlaceId": null,
  "localityPostcode": null,
  "localityState": null,
  "localityTelephone": null,
  "medicalRecordNumber": null,
  "medicalRecordNumberEnc": null,
  "name": null,
  "nameEnc": null,
  "occupation": null,
  "outcome": null,
  "poisonSeverityScore": null,
  "pregnantLactating": null,
  "pregnantStatus": null,
  "pregnantTrimester": null,
  "pregnantTrimesterUnknown": null,
  "riskAssessment": null,
  "topic": null,
  "weight": null,
  "weightUnits": null,
}
`;

exports[`patientReducer initial state - update patient suburb called 1`] = `
Object {
  "age": null,
  "ageGroup": null,
  "ageUnits": null,
  "ageYears": null,
  "animalType": null,
  "category": null,
  "circumstance": null,
  "gender": null,
  "localityAddress1": null,
  "localityCity": Array [
    null,
    "Perth",
  ],
  "localityCountry": null,
  "localityGeometry": null,
  "localityISOCountry": null,
  "localityLocation": null,
  "localityName": null,
  "localityPlaceId": null,
  "localityPostcode": null,
  "localityState": null,
  "localityTelephone": null,
  "medicalRecordNumber": null,
  "medicalRecordNumberEnc": null,
  "name": null,
  "nameEnc": null,
  "occupation": null,
  "outcome": null,
  "poisonSeverityScore": null,
  "pregnantLactating": null,
  "pregnantStatus": null,
  "pregnantTrimester": null,
  "pregnantTrimesterUnknown": null,
  "riskAssessment": null,
  "topic": null,
  "weight": null,
  "weightUnits": null,
}
`;

exports[`patientReducer initial state - update patient weight called 1`] = `
Object {
  "age": null,
  "ageGroup": null,
  "ageUnits": null,
  "ageYears": null,
  "animalType": null,
  "category": null,
  "circumstance": null,
  "gender": null,
  "localityAddress1": null,
  "localityCity": null,
  "localityCountry": null,
  "localityGeometry": null,
  "localityISOCountry": null,
  "localityLocation": null,
  "localityName": null,
  "localityPlaceId": null,
  "localityPostcode": null,
  "localityState": null,
  "localityTelephone": null,
  "medicalRecordNumber": null,
  "medicalRecordNumberEnc": null,
  "name": null,
  "nameEnc": null,
  "occupation": null,
  "outcome": null,
  "poisonSeverityScore": null,
  "pregnantLactating": null,
  "pregnantStatus": null,
  "pregnantTrimester": null,
  "pregnantTrimesterUnknown": null,
  "riskAssessment": null,
  "topic": null,
  "weight": Array [
    null,
    "1",
  ],
  "weightUnits": Array [
    null,
    "kg",
  ],
}
`;

exports[`patientReducer returns the initial state 1`] = `
Object {
  "age": null,
  "ageGroup": null,
  "ageUnits": null,
  "ageYears": null,
  "animalType": null,
  "category": null,
  "circumstance": null,
  "gender": null,
  "localityAddress1": null,
  "localityCity": null,
  "localityCountry": null,
  "localityGeometry": null,
  "localityISOCountry": null,
  "localityLocation": null,
  "localityName": null,
  "localityPlaceId": null,
  "localityPostcode": null,
  "localityState": null,
  "localityTelephone": null,
  "medicalRecordNumber": null,
  "medicalRecordNumberEnc": null,
  "name": null,
  "nameEnc": null,
  "occupation": null,
  "outcome": null,
  "poisonSeverityScore": null,
  "pregnantLactating": null,
  "pregnantStatus": null,
  "pregnantTrimester": null,
  "pregnantTrimesterUnknown": null,
  "riskAssessment": null,
  "topic": null,
  "weight": null,
  "weightUnits": null,
}
`;
